fixed flexbox size issue for section3

--- a/index.html
+++ b/index.html
@@ -18,10 +18,13 @@
         </ul>
     </div>
     <div class="description">
-        <div>My top travel destinations </div>
-        <div>This website has some of the top destination that I would love to travel to. If you have a suggestion click the button and submit a location.</div>
-        <button type="button" class="suggestion" href="#">Make a suggestion</button>
-        <div><a href="#">Image placeholder</a></div>
+        <div class="desc-container">
+            <div class="description-title">My top travel destinations </div>
+            <div class="description-body">This website has some of the top destination that I would love to travel to. If you have a suggestion click the button and submit a location.</div>
+            <button type="button" class="suggestion" href="#">Make a suggestion</button>
+        </div>
+            <div class="image"><a href="#"><img src="https://images.unsplash.com/photo-1522199710521-72d69614c702?q=80&w=2072&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" width="500px"></a></div>
+        
     </div>
     <div class="section1">
         <div class="section-title">
@@ -40,12 +43,14 @@
         <a class="quote">“I travel because it makes me realize how much I haven’t seen, how much I’m not going to see, and how much I still need to see.”</a>
         <a class="author"> – Carew Papritz</a>
     </div>
-    <div class="section3">
-        <div class="section3-wrapper">
-            <a class="section3-title">Let's travel!</a>
-            <a class="section3-info">click the button to find your next travel destination. You never know where your next adventure might be.</a>
+    <div class="container">
+        <div class="section3">
+            <div class="section3-wrapper">
+                <a class="section3-title">Let's travel!</a>
+                <a class="section3-info">click the button to find your next travel destination. You never know where your next adventure might be.</a>
+            </div>
+            <button type="button" class="section3-button" href="https://earthroulette.com/">Earth Roulette</a>
         </div>
-        <button type="button" class="section3-button" href="https://earthroulette.com/">Earth Roulette</a>
     </div>
     <div class="footer">
         <a>Copyright ❤️ sm00th-scr0ll 2024</a>
