fixed image and title size in the header

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class="description-body">This website has some of the top destination that I would love to travel to. If you have a suggestion click the button and submit a location.</div>
             <button type="button" class="suggestion" href="#">Make a suggestion</button>
         </div>
-            <div class="image"><a href="#"><img src="https://images.unsplash.com/photo-1522199710521-72d69614c702?q=80&w=2072&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" width="500px"></a></div>
+            <div class="image"><a href="#"><img src="https://images.unsplash.com/photo-1522199710521-72d69614c702?q=80&w=2072&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" ></a></div>
         
     </div>
     <div class="section1">
