fixed button link in section3

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <a class="section3-title">Let's travel!</a>
                 <a class="section3-info">click the button to find your next travel destination. You never know where your next adventure might be.</a>
             </div>
-            <button type="button" class="section3-button" href="https://earthroulette.com/">Earth Roulette</a>
+            <a  class="section3-button" href="https://earthroulette.com/">Earth Roulette</a>
         </div>
     </div>
     <div class="footer">
