Added destination locations

--- a/index.html
+++ b/index.html
@@ -23,22 +23,22 @@
             <div class="description-body">This website has some of the top destination that I would love to travel to. If you have a suggestion click the button and submit a location.</div>
             <button type="button" class="suggestion" href="#">Make a suggestion</button>
         </div>
-            <div class="image"><a href="#"><img src="https://images.unsplash.com/photo-1522199710521-72d69614c702?q=80&w=2072&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" ></a></div>
+            <div class="image"><a href="#"><img class="img0" src="https://images.unsplash.com/photo-1522199710521-72d69614c702?q=80&w=2072&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" ></a></div>
         
     </div>
     <div class="section1">
         <div class="section-title">
             <a>Destinations</a>
         </div>
-        <div class-="destinations">
-            <div class="location"></div>
-            <div class="location"></div>
-            <div class="location"></div>
-            <div class="location"></div>
-            <div class="location"></div>
-            <div class="location"></div>
-        </div>
     </div>
+     <div class="location">   
+            <div class="location1"><img class="pics" src="https://images.unsplash.com/photo-1464822759023-fed622ff2c3b?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" style="width: 200px; height: 200px; object-fit: cover;"><a>Kluane National park, Canada</a></div>
+            <div class="location2"><img class="pics" src="https://media.istockphoto.com/id/1277499450/photo/aurora-borealis-over-in-the-dark-night-sky-over-the-snowy-mountains-in-the-lofoten.webp?b=1&s=170667a&w=0&k=20&c=3-FCmtgddS91Qw6AuZOH_N9Dpepe92STwqTe2Q6CAwQ=" style="width: 200px; height: 200px; object-fit: cover;"><a>Lofoten Islands, Norway</a></div>
+            <div class="location2"><img class="pics" src="https://images.unsplash.com/photo-1611043714658-af3e56bc5299?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" style="width: 200px; height: 200px; object-fit: cover;"><a>Maldives Islands</a></div>
+            <div class="location2"><img class="pics" src="https://images.unsplash.com/photo-1530122037265-a5f1f91d3b99?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" style="width: 200px; height: 200px; object-fit: cover;"><a>Lauterbrunnen, Switzerland</a></div>
+            <div class="location2"><img class="pics" src="https://images.unsplash.com/photo-1520175480921-4edfa2983e0f?q=80&w=2067&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" style="width: 200px; height: 200px; object-fit: cover;"><a>Venice, Italy</a></div>
+            <div class="location2"><img class="pics" src="https://images.unsplash.com/photo-1590273971191-2af8df641e2c?q=80&w=1935&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" style="width: 200px; height: 200px; object-fit: fill;"><a>Rome, Italy</a></div>
+    </div>  
     <div class="section2">
         <a class="quote">“I travel because it makes me realize how much I haven’t seen, how much I’m not going to see, and how much I still need to see.”</a>
         <a class="author"> – Carew Papritz</a>
